--- a/app/src/main/res/layout/fragment_background.xml
+++ b/app/src/main/res/layout/fragment_background.xml
@@ -90,9 +90,5 @@
         android:layout_column="0"
         android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"/>
-</GridLayout><?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-</LinearLayout>
+</GridLayout>
